= Changelog


== Release 1.0.1

* FIXED: Since the removal of rails/init.rb in 7278376ab77651e540e39552384ad9677e32ff7e, Rails fails to load the helpers.


== Release 1.0.0

* CHANGED: Removed empty install/uninstall hooks and tasks folder.

* CHANGED: Removed rails/init hook because deprecated in Rails 3.


== Release 0.2.0

* Releasing the library as open source project.


== Release 0.1.1

* ADDED: documentation file.

* CHANGED: run test against Rails ~> 2.3.0 but ensure compatibility with Rails 2.2.x.

* CHANGED: Removed BUILD and STATUS constants. Added Version::ALPHA constant to be used when I need to package prereleases (see RubyGem --prerelease flag).


== Release 0.1.0

* Initial version
