@@ -1,5 +1,9 @@
 = Changelog
 
+== master
+
+* FIXED: Invalid documentation for Element target in the controller class context (closes #2)
+
 
 == Release 1.0.1
 
